syntax = "proto3";
package service;

//添加生成go文件的路径
option go_package="api/service";

// 引入annotation用于定义gateway
import "google/api/annotations.proto";

message GrpcGateWayRequest {
    int32 goods_id = 1;		// 传入的商品id
}

message GrpcGateWayResponse {
    int32 goods_stock = 1;	// 商品库存
}

service GrpcGateWayService {
    rpc GetGrpcGateWayStock (GrpcGateWayRequest) returns (GrpcGateWayResponse) {
        option (google.api.http) = {
            get: "/v1/prod/{goods_id}"	// 注意这里的路径参数要和上面 GrpcGateWayRequest 中定义的保持一致
        };
    }
}

